--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,13 +5,13 @@ homepage: https://bosskmk.github.io
 repository: https://github.com/bosskmk/pluto_grid
 
 environment:
-  sdk: '>=2.12.0'
+  sdk: ">=2.12.0"
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.18.0
+  intl: ^0.19.0
   rxdart: ^0.27.1
   linked_scroll_controller: ^0.2.0
   collection: ^1.15.0
